<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange_green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:gravity="top|center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <ImageView
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:padding="12dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_circle_degradado"
                android:src="@drawable/ic_check"
                app:tint="@color/Buttons_Primary_Background_primary_button_light"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:hapticFeedbackEnabled="false"
                android:text="@string/string_contraena_modif"
                android:textSize="20sp"
                android:theme="@style/headline_semibold_xs" />

            <TextView
                android:id="@+id/textView_plantoper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:hapticFeedbackEnabled="false"
                android:text="@string/string_contrasena_mensaje"
                android:theme="@style/body_regular_xxxs" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_recover4th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/string_ini_sesion"
                android:textAllCaps="false"
                android:textColor="@color/Buttons_Primary_Text_text_primary_light"
                android:theme="@style/headline_semibold_xxs"
                app:layout_constraintTop_toBottomOf="@+id/tv_register_fragment_first"
                />

        </LinearLayout>


    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>